# tensor

./: .gitignore  .nvimrc  CMakeLists.txt  README.md
include/tensor/: size.h  tensor.h  utils.h
tests/: CMakeLists.txt  main.cpp
